// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SnapshotInteractiveMode skip 1 test, then quit 1`] = `
"<moveCursorUpBy6Rows>
<eraseScreenDown>

<bold>Interactive Snapshot Progress</intensity>
 › <bold><dim>1 snapshot remaining</intensity></intensity>

<bold>Watch Usage</intensity>
<dim> › Press </intensity>u<dim> to update failing snapshots for this test.</intensity>
<dim> › Press </intensity>s<dim> to skip the current test.</intensity>
<dim> › Press </intensity>q<dim> to quit Interactive Snapshot Mode.</intensity>
<dim> › Press </intensity>Enter<dim> to trigger a test run.</intensity>
"
`;

exports[`SnapshotInteractiveMode skip 1 test, then quit 2`] = `
"<clearTerminal>

<bold>Interactive Snapshot Result</intensity>
 › <bold><dim>1 snapshot reviewed</intensity></intensity>, <bold><yellow>1 snapshot skipped</color></intensity>

<bold>Watch Usage</intensity>
<dim> › Press </intensity>r<dim> to restart Interactive Snapshot Mode.</intensity>
<dim> › Press </intensity>q<dim> to quit Interactive Snapshot Mode.</intensity>
"
`;

exports[`SnapshotInteractiveMode skip 1 test, then restart 1`] = `
"<moveCursorUpBy6Rows>
<eraseScreenDown>

<bold>Interactive Snapshot Progress</intensity>
 › <bold><dim>1 snapshot remaining</intensity></intensity>

<bold>Watch Usage</intensity>
<dim> › Press </intensity>u<dim> to update failing snapshots for this test.</intensity>
<dim> › Press </intensity>s<dim> to skip the current test.</intensity>
<dim> › Press </intensity>q<dim> to quit Interactive Snapshot Mode.</intensity>
<dim> › Press </intensity>Enter<dim> to trigger a test run.</intensity>
"
`;

exports[`SnapshotInteractiveMode skip 1 test, then restart 2`] = `
"<clearTerminal>

<bold>Interactive Snapshot Result</intensity>
 › <bold><dim>1 snapshot reviewed</intensity></intensity>, <bold><yellow>1 snapshot skipped</color></intensity>

<bold>Watch Usage</intensity>
<dim> › Press </intensity>r<dim> to restart Interactive Snapshot Mode.</intensity>
<dim> › Press </intensity>q<dim> to quit Interactive Snapshot Mode.</intensity>
"
`;

exports[`SnapshotInteractiveMode skip 1 test, then restart 3`] = `
"<moveCursorUpBy6Rows>
<eraseScreenDown>

<bold>Interactive Snapshot Progress</intensity>
 › <bold><dim>1 snapshot remaining</intensity></intensity>

<bold>Watch Usage</intensity>
<dim> › Press </intensity>u<dim> to update failing snapshots for this test.</intensity>
<dim> › Press </intensity>s<dim> to skip the current test.</intensity>
<dim> › Press </intensity>q<dim> to quit Interactive Snapshot Mode.</intensity>
<dim> › Press </intensity>Enter<dim> to trigger a test run.</intensity>
"
`;

exports[`SnapshotInteractiveMode skip 1 test, update 1 test, then finish and restart 1`] = `
"<moveCursorUpBy6Rows>
<eraseScreenDown>

<bold>Interactive Snapshot Progress</intensity>
 › <bold><dim>2 snapshots remaining</intensity></intensity>

<bold>Watch Usage</intensity>
<dim> › Press </intensity>u<dim> to update failing snapshots for this test.</intensity>
<dim> › Press </intensity>s<dim> to skip the current test.</intensity>
<dim> › Press </intensity>q<dim> to quit Interactive Snapshot Mode.</intensity>
<dim> › Press </intensity>Enter<dim> to trigger a test run.</intensity>
"
`;

exports[`SnapshotInteractiveMode skip 1 test, update 1 test, then finish and restart 2`] = `
"<moveCursorUpBy6Rows>
<eraseScreenDown>

<bold>Interactive Snapshot Progress</intensity>
 › <bold><dim>1 snapshot remaining</intensity></intensity>, <bold><yellow>1 snapshot skipped</color></intensity>

<bold>Watch Usage</intensity>
<dim> › Press </intensity>u<dim> to update failing snapshots for this test.</intensity>
<dim> › Press </intensity>s<dim> to skip the current test.</intensity>
<dim> › Press </intensity>q<dim> to quit Interactive Snapshot Mode.</intensity>
<dim> › Press </intensity>Enter<dim> to trigger a test run.</intensity>
"
`;

exports[`SnapshotInteractiveMode skip 1 test, update 1 test, then finish and restart 3`] = `
"<clearTerminal>

<bold>Interactive Snapshot Result</intensity>
 › <bold><dim>2 snapshots reviewed</intensity></intensity>, <bold><green>1 snapshot updated</color></intensity>, <bold><yellow>1 snapshot skipped</color></intensity>

<bold>Watch Usage</intensity>
<dim> › Press </intensity>r<dim> to restart Interactive Snapshot Mode.</intensity>
<dim> › Press </intensity>q<dim> to quit Interactive Snapshot Mode.</intensity>
"
`;

exports[`SnapshotInteractiveMode skip 1 test, update 1 test, then finish and restart 4`] = `
"<moveCursorUpBy6Rows>
<eraseScreenDown>

<bold>Interactive Snapshot Progress</intensity>
 › <bold><dim>1 snapshot remaining</intensity></intensity>

<bold>Watch Usage</intensity>
<dim> › Press </intensity>u<dim> to update failing snapshots for this test.</intensity>
<dim> › Press </intensity>s<dim> to skip the current test.</intensity>
<dim> › Press </intensity>q<dim> to quit Interactive Snapshot Mode.</intensity>
<dim> › Press </intensity>Enter<dim> to trigger a test run.</intensity>
"
`;

exports[`SnapshotInteractiveMode skip 2 tests, then finish and restart 1`] = `
"<moveCursorUpBy6Rows>
<eraseScreenDown>

<bold>Interactive Snapshot Progress</intensity>
 › <bold><dim>2 snapshots remaining</intensity></intensity>

<bold>Watch Usage</intensity>
<dim> › Press </intensity>u<dim> to update failing snapshots for this test.</intensity>
<dim> › Press </intensity>s<dim> to skip the current test.</intensity>
<dim> › Press </intensity>q<dim> to quit Interactive Snapshot Mode.</intensity>
<dim> › Press </intensity>Enter<dim> to trigger a test run.</intensity>
"
`;

exports[`SnapshotInteractiveMode skip 2 tests, then finish and restart 2`] = `
"<moveCursorUpBy6Rows>
<eraseScreenDown>

<bold>Interactive Snapshot Progress</intensity>
 › <bold><dim>1 snapshot remaining</intensity></intensity>, <bold><yellow>1 snapshot skipped</color></intensity>

<bold>Watch Usage</intensity>
<dim> › Press </intensity>u<dim> to update failing snapshots for this test.</intensity>
<dim> › Press </intensity>s<dim> to skip the current test.</intensity>
<dim> › Press </intensity>q<dim> to quit Interactive Snapshot Mode.</intensity>
<dim> › Press </intensity>Enter<dim> to trigger a test run.</intensity>
"
`;

exports[`SnapshotInteractiveMode skip 2 tests, then finish and restart 3`] = `
"<clearTerminal>

<bold>Interactive Snapshot Result</intensity>
 › <bold><dim>2 snapshots reviewed</intensity></intensity>, <bold><yellow>2 snapshots skipped</color></intensity>

<bold>Watch Usage</intensity>
<dim> › Press </intensity>r<dim> to restart Interactive Snapshot Mode.</intensity>
<dim> › Press </intensity>q<dim> to quit Interactive Snapshot Mode.</intensity>
"
`;

exports[`SnapshotInteractiveMode skip 2 tests, then finish and restart 4`] = `
"<moveCursorUpBy6Rows>
<eraseScreenDown>

<bold>Interactive Snapshot Progress</intensity>
 › <bold><dim>2 snapshots remaining</intensity></intensity>

<bold>Watch Usage</intensity>
<dim> › Press </intensity>u<dim> to update failing snapshots for this test.</intensity>
<dim> › Press </intensity>s<dim> to skip the current test.</intensity>
<dim> › Press </intensity>q<dim> to quit Interactive Snapshot Mode.</intensity>
<dim> › Press </intensity>Enter<dim> to trigger a test run.</intensity>
"
`;

exports[`SnapshotInteractiveMode update 1 test, skip 1 test, then finish and restart 1`] = `
"<moveCursorUpBy6Rows>
<eraseScreenDown>

<bold>Interactive Snapshot Progress</intensity>
 › <bold><dim>2 snapshots remaining</intensity></intensity>

<bold>Watch Usage</intensity>
<dim> › Press </intensity>u<dim> to update failing snapshots for this test.</intensity>
<dim> › Press </intensity>s<dim> to skip the current test.</intensity>
<dim> › Press </intensity>q<dim> to quit Interactive Snapshot Mode.</intensity>
<dim> › Press </intensity>Enter<dim> to trigger a test run.</intensity>
"
`;

exports[`SnapshotInteractiveMode update 1 test, skip 1 test, then finish and restart 2`] = `
"<moveCursorUpBy6Rows>
<eraseScreenDown>

<bold>Interactive Snapshot Progress</intensity>
 › <bold><dim>1 snapshot remaining</intensity></intensity>, <bold><green>1 snapshot updated</color></intensity>

<bold>Watch Usage</intensity>
<dim> › Press </intensity>u<dim> to update failing snapshots for this test.</intensity>
<dim> › Press </intensity>s<dim> to skip the current test.</intensity>
<dim> › Press </intensity>q<dim> to quit Interactive Snapshot Mode.</intensity>
<dim> › Press </intensity>Enter<dim> to trigger a test run.</intensity>
"
`;

exports[`SnapshotInteractiveMode update 1 test, skip 1 test, then finish and restart 3`] = `
"<clearTerminal>

<bold>Interactive Snapshot Result</intensity>
 › <bold><dim>2 snapshots reviewed</intensity></intensity>, <bold><green>1 snapshot updated</color></intensity>, <bold><yellow>1 snapshot skipped</color></intensity>

<bold>Watch Usage</intensity>
<dim> › Press </intensity>r<dim> to restart Interactive Snapshot Mode.</intensity>
<dim> › Press </intensity>q<dim> to quit Interactive Snapshot Mode.</intensity>
"
`;

exports[`SnapshotInteractiveMode update 1 test, skip 1 test, then finish and restart 4`] = `
"<moveCursorUpBy6Rows>
<eraseScreenDown>

<bold>Interactive Snapshot Progress</intensity>
 › <bold><dim>1 snapshot remaining</intensity></intensity>

<bold>Watch Usage</intensity>
<dim> › Press </intensity>u<dim> to update failing snapshots for this test.</intensity>
<dim> › Press </intensity>s<dim> to skip the current test.</intensity>
<dim> › Press </intensity>q<dim> to quit Interactive Snapshot Mode.</intensity>
<dim> › Press </intensity>Enter<dim> to trigger a test run.</intensity>
"
`;

exports[`SnapshotInteractiveMode update 1 test, then finish and return 1`] = `
"<moveCursorUpBy6Rows>
<eraseScreenDown>

<bold>Interactive Snapshot Progress</intensity>
 › <bold><dim>1 snapshot remaining</intensity></intensity>

<bold>Watch Usage</intensity>
<dim> › Press </intensity>u<dim> to update failing snapshots for this test.</intensity>
<dim> › Press </intensity>s<dim> to skip the current test.</intensity>
<dim> › Press </intensity>q<dim> to quit Interactive Snapshot Mode.</intensity>
<dim> › Press </intensity>Enter<dim> to trigger a test run.</intensity>
"
`;

exports[`SnapshotInteractiveMode update 1 test, then finish and return 2`] = `
"<clearTerminal>

<bold>Interactive Snapshot Result</intensity>
 › <bold><dim>1 snapshot reviewed</intensity></intensity>, <bold><green>1 snapshot updated</color></intensity>

<bold>Watch Usage</intensity>
<dim> › Press </intensity>Enter<dim> to return to watch mode.</intensity>
"
`;

exports[`SnapshotInteractiveMode update 2 tests, then finish and return 1`] = `
"<moveCursorUpBy6Rows>
<eraseScreenDown>

<bold>Interactive Snapshot Progress</intensity>
 › <bold><dim>2 snapshots remaining</intensity></intensity>

<bold>Watch Usage</intensity>
<dim> › Press </intensity>u<dim> to update failing snapshots for this test.</intensity>
<dim> › Press </intensity>s<dim> to skip the current test.</intensity>
<dim> › Press </intensity>q<dim> to quit Interactive Snapshot Mode.</intensity>
<dim> › Press </intensity>Enter<dim> to trigger a test run.</intensity>
"
`;

exports[`SnapshotInteractiveMode update 2 tests, then finish and return 2`] = `
"<moveCursorUpBy6Rows>
<eraseScreenDown>

<bold>Interactive Snapshot Progress</intensity>
 › <bold><dim>1 snapshot remaining</intensity></intensity>, <bold><green>1 snapshot updated</color></intensity>

<bold>Watch Usage</intensity>
<dim> › Press </intensity>u<dim> to update failing snapshots for this test.</intensity>
<dim> › Press </intensity>s<dim> to skip the current test.</intensity>
<dim> › Press </intensity>q<dim> to quit Interactive Snapshot Mode.</intensity>
<dim> › Press </intensity>Enter<dim> to trigger a test run.</intensity>
"
`;

exports[`SnapshotInteractiveMode update 2 tests, then finish and return 3`] = `
"<clearTerminal>

<bold>Interactive Snapshot Result</intensity>
 › <bold><dim>2 snapshots reviewed</intensity></intensity>, <bold><green>2 snapshots updated</color></intensity>

<bold>Watch Usage</intensity>
<dim> › Press </intensity>Enter<dim> to return to watch mode.</intensity>
"
`;
